--- a/src/global.scss
+++ b/src/global.scss
@@ -1,10 +1,12 @@
 html {
-  font-family: "Helvetica Neue","Helvetica","Arial",sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   font-size: 106.25%;
-  quotes: "“" "”";
+  quotes: '“' '”';
 }
 
-html, body {
+body,
+html {
   margin: 0;
   padding: 0;
 }
@@ -12,19 +14,35 @@ html, body {
 body {
   font-size: 17px;
   font-weight: 400;
-  letter-spacing: -.022em;
-  font-family: "Helvetica Neue","Helvetica","Arial",sans-serif;
+  letter-spacing: -0.022em;
+  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   font-style: normal;
 }
 
-*, html, body, div, ul, li, h1, h2, h3, p, span, option, select {
+*,
+body,
+div,
+h1,
+h2,
+h3,
+html,
+li,
+option,
+p,
+select,
+span,
+ul {
   margin: 0;
   border: none;
   padding: 0;
   box-sizing: border-box;
 }
 
-body, input, textarea, select, button {
+body,
+button,
+input,
+select,
+textarea {
   font-synthesis: none;
   -moz-font-feature-settings: 'kern';
   -webkit-font-smoothing: antialiased;
@@ -38,9 +56,19 @@ a {
   text-decoration: none;
 }
 
-input, textarea, button {
+button,
+input,
+textarea {
   -webkit-appearance: none;
   font-size: 1rem;
   padding: 4px 8px;
   outline: none;
+}
+
+#app,
+#root,
+body,
+html {
+  width: 100%;
+  min-height: 100%;
 }
