Upgraded packages, added css vendor prefixes and css extract enhanced

--- a/src/global.css
+++ b/src/global.css
@@ -9,6 +9,7 @@ body,
 html {
   margin: 0;
   padding: 0;
+  background-color: gray;
 }
 
 body {
@@ -71,4 +72,8 @@ body,
 html {
   width: 100%;
   min-height: 100%;
+}
+
+::placeholder {
+  color: gray;
 }
