--- a/src/global.pcss
+++ b/src/global.pcss
@@ -1,3 +1,7 @@
+:root {
+  --tint-color: rgb(0, 176, 251);
+}
+
 html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
@@ -9,7 +13,6 @@ body,
 html {
   margin: 0;
   padding: 0;
-  background-color: gray;
 }
 
 body {
@@ -18,6 +21,7 @@ body {
   letter-spacing: -0.022em;
   font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   font-style: normal;
+  background: url('assets/app-icon.png') center center;
 }
 
 *,
@@ -55,6 +59,7 @@ textarea {
 
 a {
   text-decoration: none;
+  color: var(--tint-color);
 }
 
 button,
@@ -72,8 +77,4 @@ body,
 html {
   width: 100%;
   min-height: 100%;
-}
-
-::placeholder {
-  color: gray;
 }
