Fixed and cleaned

--- a/src/containers/App/styles.pcss
+++ b/src/containers/App/styles.pcss
@@ -1,12 +1,7 @@
-.app .content {
-  padding: 30px;
-}
-
-.MuiInput-root-65 {
-  margin-right: 20px;
-}
-
-.MuiCard-root-114 {
-  margin-top: 20px;
-  display: inline-block;
+.app {
+  h1 {
+    color: var(--tint-color);
+    margin-bottom: 10px;
+    padding: 10px;
+  }
 }
