--- a/src/containers/NotFound/style.pcss
+++ b/src/containers/NotFound/style.pcss
@@ -1,7 +1,8 @@
 .not-found {
   &__header {
-    background-color: black;
+    background-color: var(--tint-color);
     color: white;
     padding: 10px;
+    margin-bottom: 10px;
   }
 }
